add theme and enable GH Paes

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ rvm:
   - 2.3.3
 
 install:
-  - gem install jekyll html-proofer
+  - gem install html-proofer
 script:
   - bundle install --path vendor/bundle
   - jekyll build
