--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - gem install html-proofer
 script:
   - bundle install --path vendor/bundle
-  - jekyll build
+  - bundle exec jekyll build
   - htmlproofer ./_site
 
 branches:
