--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ env:
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
 
 before_deploy:
-  - rm -rf docker deployed* .travis.yml .bundle .gitignore README.md _posts
+  - rm -rf docker deployed* .travis.yml .bundle .gitignore README.md _posts vendor
 deploy:
   provider: pages
   skip_cleanup: true
