--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,8 @@ github_username:  jotadrilo
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-cayman
+# theme: jekyll-theme-cayman
+theme: minima
 gems:
   - jekyll-feed
 exclude:
