--- a/_config.yml
+++ b/_config.yml
@@ -5,14 +5,13 @@ description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: /vbuf
-url: ""
+baseurl: "/vbuf"
+url: "http://localhost:4000"
 twitter_username: jotadrilo
 github_username:  jotadrilo
 
 # Build settings
 markdown: kramdown
-# theme: jekyll-theme-cayman
 theme: minima
 gems:
   - jekyll-feed
