--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ install:
 script:
   - bundle install --path vendor/bundle
   - bundle exec jekyll build
+  - ln -sf . _site/vbuf # Hack to prevent errors with Jekyll baseurl
   - htmlproofer ./_site
+  - rm _site/vbuf
 
 branches:
   only:
@@ -25,6 +27,7 @@ env:
 
 before_deploy:
   - rm -rf _posts docker vendor README.md .travis.yml .bundle .gitignore
+  - sed -i 's#url:.*#url: "https://jotadrilo.github.io"#g' _config.yml
 deploy:
   provider: pages
   skip_cleanup: true
