--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "/vbuf"
-url: "https://jotadrilo.github.io"
+url ""
+# url: "https://jotadrilo.github.io"
 # url: "http://localhost:4000"
 twitter_username: jotadrilo
 github_username:  jotadrilo
