hack for inexistent base url

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ install:
 script:
   - bundle install --path vendor/bundle
   - bundle exec jekyll build
+  - ln -sf . _site/vbuf
   - htmlproofer ./_site
+  - rm _site/vbuf
 
 branches:
   only:
