--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
 # Site settings
 title: VBUF
-email: jdrios@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+email: josriolop@gmail.com
+description: Vida bajo un flexo, no solo sólo.
 baseurl: "/vbuf"
 url: ""
 # url: "https://jotadrilo.github.io"
