--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,11 @@ jobs:
         name: Checkout 🛎️
         uses: actions/checkout@v3
       -
+        name: Prepare Ruby env
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.1
+      -
         name: Install and Build 🔧
         run: ./scripts/dist.sh -s blog -d dist
       -
